--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "stats.js": "^0.17.0",
-    "three": "^0.109.0"
+    "three": "^0.109.0",
+    "tween": "^0.9.0"
   },
   "devDependencies": {
     "@types/three": "^0.103.2",
